--- a/src/com/v3pm_prototype/view/TabScenarioCalculation.fxml
+++ b/src/com/v3pm_prototype/view/TabScenarioCalculation.fxml
@@ -57,11 +57,23 @@
             </HBox>
             <HBox>
                <children>
+                  <BarChart fx:id="bcRBroken" legendVisible="false" maxHeight="1.7976931348623157E308" prefHeight="260.0" title="Amount of Broken Restrictions">
+                    <xAxis>
+                      <CategoryAxis side="BOTTOM" />
+                    </xAxis>
+                    <yAxis>
+                      <NumberAxis forceZeroInRange="false" label="#Broken" side="LEFT" />
+                    </yAxis>
+                  </BarChart>
                   <SwingNode fx:id="swingNode" HBox.hgrow="ALWAYS">
                      <HBox.margin>
                         <Insets left="8.0" />
                      </HBox.margin>
                   </SwingNode>
+               </children>
+            </HBox>
+            <HBox>
+               <children>
                   <LineChart fx:id="lcProcessQuality" legendSide="RIGHT" legendVisible="false" prefHeight="400.0" stylesheets="@V3PMGUI.css" title="Process Quality" HBox.hgrow="ALWAYS">
                     <xAxis>
                       <CategoryAxis endMargin="10.0" gapStartAndEnd="false" label="Periods" side="BOTTOM" startMargin="10.0" />
@@ -78,9 +90,25 @@
                         <NumberAxis forceZeroInRange="false" label="Time" side="LEFT" />
                      </yAxis>
                   </LineChart>
+                  <LineChart fx:id="lcProcessOOP" legendSide="RIGHT" legendVisible="false" prefHeight="400.0" stylesheets="@V3PMGUI.css" title="Process Operating Outflows">
+                     <xAxis>
+                        <CategoryAxis endMargin="10.0" gapStartAndEnd="false" label="Periods" side="BOTTOM" startMargin="10.0" />
+                     </xAxis>
+                     <yAxis>
+                        <NumberAxis forceZeroInRange="false" label="Time" side="LEFT" />
+                     </yAxis>
+                  </LineChart>
+                  <LineChart fx:id="lcProcessFC" legendSide="RIGHT" legendVisible="false" prefHeight="400.0" stylesheets="@V3PMGUI.css" title="Process Fixed Costs">
+                     <xAxis>
+                        <CategoryAxis endMargin="10.0" gapStartAndEnd="false" label="Periods" side="BOTTOM" startMargin="10.0" />
+                     </xAxis>
+                     <yAxis>
+                        <NumberAxis forceZeroInRange="false" label="Time" side="LEFT" />
+                     </yAxis>
+                  </LineChart>
                </children>
             </HBox>
-            <TableView fx:id="tvProcesses" maxHeight="160.0" prefHeight="300.0" prefWidth="200.0" VBox.vgrow="NEVER">
+            <TableView fx:id="tvProcesses" maxHeight="250.0" prefWidth="200.0" VBox.vgrow="NEVER">
               <columns>
                 <TableColumn fx:id="clmProcessesName" prefWidth="311.0" text="Process" />
                 <TableColumn fx:id="clmProcessesQ" prefWidth="95.0" text="Quality" />
@@ -93,14 +121,6 @@
                   <TableColumn fx:id="clmProcessesFCDelta" prefWidth="102.0" text="FCDelta" />
               </columns>
             </TableView>
-            <BarChart fx:id="bcRBroken" barGap="0.0" categoryGap="0.0" maxHeight="1.7976931348623157E308" prefHeight="400.0" title="Amount of Broken Restrictions">
-              <xAxis>
-                <CategoryAxis side="BOTTOM" />
-              </xAxis>
-              <yAxis>
-                <NumberAxis forceZeroInRange="false" label="Amount Broken" side="LEFT" />
-              </yAxis>
-            </BarChart>
          </children>
          <padding>
             <Insets bottom="14.0" left="14.0" right="14.0" top="14.0" />
